<resources>
    <string name="app_name">Progress Bar</string>
    <string name="progressbar_1_progress">条状进度栏：</string>
    <string name="progressbar_1_minus">-</string>
    <string name="progressbar_1_plus">+</string>
    <string name="progressbar_2_secondary_progress">双层进度栏：</string>
    <string name="progressbar_up">第一层进度栏</string>
    <string name="progressbar_down">第二层进度栏</string>
    <string name="progressbar_3">不可确定进度进度栏</string>
</resources>
